[package]
name = "hyper_actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
hyper = {version="0.14.28", features=["full"]}
reqwest = {version="0.11.24", features=["json"]}
serde_json = "1.0.114"
serde = {version="1.0.197", features=["derive"]}
